fixed positioning on cards on recipe and profile page, also continued to work on emailJs functionality. Changed font vh for nav to fix overlapping navbar on certain screen sizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,8 +50,9 @@ body {background-image: url(../images/wall.jpg);
 }
 
 .nav-item {
-    font-size: 2.5vh;
+    font-size: 2vh;
 }
+
 
 .search {
     font-size: 10px;
@@ -59,6 +60,19 @@ body {background-image: url(../images/wall.jpg);
 
 .flashes h4 {
     line-height: 2;
+}
+
+.profile-card {
+    min-height: 350px; 
+}
+
+.recipe-card {
+   min-height: 500px;  
+}
+
+#message {
+    height: 6rem;
+    margin-bottom: 10px;
 }
 
 .btn-small{
